adjusted missing exceptions